--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 
+		<div id="game">
+			<h1>The Psychic Game</h1>
+				<h2>Guess what letter I am thinking of</h2>
+					<h3 id= "wins">Wins: </h3>
+					<h3 id= "losses">Losses: </h3>
+					<h3 id= "guessesLeft">Guesses Left: </h3>
+					<h3 id= "guessesSoFar">Your guesses so far</h3>
+		</div>
+
 </body>
 </html>
