--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 				<h2>Guess what letter I am thinking of</h2>
 					<h3 id= "wins">Wins: </h3>
 					<h3 id= "losses">Losses: </h3>
-					<h3 id= "guessesLeft">Guesses Left: </h3>
-					<h3 id= "guessesSoFar">Your guesses so far</h3>
+					<h3 id= "maxGuesses">Guesses Left: </h3>
+					<h3 id= "guessedLetters">Your guesses so far</h3>
 		</div>
 
 </body>
